# mdbook-rss-feed

./: .gitignore  Cargo.toml  README.md
book/: rss.xml
mdbook-rss-feed-aur/: .SRCINFO  PKGBUILD
pkg/mdbook-rss-feed/: .BUILDINFO  .MTREE  .PKGINFO
pkg/mdbook-rss-feed-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: lib.rs  lib.rs.bak
src/mdbook-rss-feed-1.3.1/: .cargo_vcs_info.json  Cargo.toml
src/mdbook-rss-feed-1.3.1/src/: lib.rs
