[package]
name = "mdbook-rss-feed"
version = "0.2.1"
edition = "2024"
authors = ["T Sawyer saylesss88@github.com"]
license = "Apache-2.0"
description = "An mdBook preprocessor that generates a full-content RSS/Atom feed from your book"
repository = "https://github.com/saylesss88/mdbook-rss-feed"
readme = "README.md"
keywords = ["mdbook", "rss", "feed", "preprocessor", "blog"]
categories = ["command-line-utilities", "web-programming"]

[lib]
name = "mdbook_rss_feed"
path = "src/lib.rs"

[[bin]]
name = "mdbook-rss-feed"
path = "src/bin/mdbook-rss-feed.rs"

[dependencies]
clap = {version = "4", features = ["derive"]}
anyhow = "1"
walkdir = "2"
rss = {version = "2", features = ["builders"]}
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
chrono = {version = "0.4", features = ["serde"]}
pulldown-cmark = "0.13"
serde_json = "1"
